# tetris

./: Cargo.toml  README.md  masks.txt  rotations.txt
src/: main.rs  neural_network.rs  support.rs
src/game/: mod.rs  nn_trainer.rs  nn_visual.rs  visual.rs
