[package]
name = "tetris"
version = "0.1.0"
authors = ["gorilskij <43991400@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
no-comment = "0.0.1"
itertools = "0.8"
ggez = "0.5"
rand = "0.7.3"
tuple-map = "0.4.0"
tap = "0.4.0"
derive_more = "0.99.5"